...
"%1$@ ×%2$d" = "%1$@ ×%2$d";

/* Message shown in a confirmation prompt when removing a saved payment method. */
"%@ will no longer be saved to your wallet." = "%@ will no longer be saved to your wallet.";

/* Text for a button that, when tapped, displays another screen where the customer can add payment method details */
"+ Add" = "+ Add";

/* Exchange rate with conversion fee disclosure, e.g. '1 GBP = 1.2871 USD (includes 4% conversion fee).' */
"1 %1$@ = %2$@ %3$@ (includes %4$@%% conversion fee)." = "1 %1$@ = %2$@ %3$@ (includes %4$@%% conversion fee).";

/* Exchange rate caption, e.g. '1 GBP = 1.2871 USD' */
"1 %@ = %@ %@" = "1 %1$@ = %2$@ %3$@";
...
"Accept" = "Accept";

/* Title shown above a card entry form */
"Add a card" = "Add a card";

/* Text for a button that, when tapped, displays another screen where the customer can add a new payment method */
"Add a payment method" = "Add a payment method";

/* Button prompt to add a bank account as a payment method. */
"Add bank account" = "Add bank account";

/* Title shown above a view allowing the customer to save their first card. */
"Add card" = "Add card";
...
"Code sent" = "Code sent";

/* Instructions shown while waiting for a Pix payment authorization */
"Complete the payment using Pix to finish the purchase." = "Complete the payment using Pix to finish the purchase.";

/* Title used for various UIs, including a button that confirms entered payment details or the selection of a payment method. */
"Confirm" = "Confirm";

/* Title of a screen where the user can update their payment method before continuing
with the transaction. */
"Confirm payment details" = "Confirm payment details";

/* Instructions shown while waiting for a Bizum payment authorization */
...
/* Pay over time with Affirm copy */
"Pay over time with %@" = "Pay over time with %@";

/* Promotional text for Affirm, displayed in a button that lets the customer pay with Affirm */
"Pay over time with Affirm" = "Pay over time with Affirm";

/* Text for the 'Pay with Link' button. The placeholder is a Stripe brand name and should not be translated. */
"Pay with %@" = "Pay with %@";

/* Text for the 'Pay with Link' button. 'Link' is a Stripe brand, please do not translate the word 'Link'. */
"Pay with Link" = "Pay with Link";

/* US Bank Account copy title for Mobile payment element form */
"Pay with your bank account in just a few steps." = "Pay with your bank account in just a few steps.";

/* Label for a section displaying payment details. */
...
